--- a/index.html
+++ b/index.html
@@ -9,15 +9,19 @@
 <body>
     <div id="container">
         <header class="dark">
-            <img src="./assets/icons/logo-mobile.svg" alt="logo_mobile">
-            <img src="./assets/icons/burger.svg" alt="">
-            <!-- <nav>
-                <ul>
-                    <li><a href="">Modo Nocturno</a></li>
-                    <li><a href="">Favoritos</a></li>
-                    <li><a href="">Mis GIFOS</a></li>
-                </ul>
-            </nav> -->
+            <nav class="nav">
+                <div class="logo">
+                    <img src="./assets/icons/logo-mobile.svg" alt="logo_mobile">
+                    <img src="./assets/icons/burger.svg" alt="">
+                </div>
+                <div class="menu">
+                    <ul>
+                        <li><a href="">Modo Nocturno</a></li>
+                        <li><a href="">Favoritos</a></li>
+                        <li><a href="">Mis GIFOS</a></li>
+                    </ul>
+                </div>
+            </nav>
         </header>
         <main>
             <section id="inspirate" class="dark">
