Primeras configuraciones RWD

--- a/index.html
+++ b/index.html
@@ -34,23 +34,26 @@
                     <img src="./assets/icons/icon-search.svg" alt="search">
                 </div> -->
                 <input type="text" id="buscar" placeholder="Busca GIFOS y más">
-                <h3>Trending:<br>Reactions, Entertainment, Sports, Stickers, Artists</h3>
+                <h3>Trending:</h3>
+                <p id="reactions">Reactions, Entertainment, Sports, Stickers, Artists</p>
             </section>
             <section id="trending" class="dark">
                 <h2>Trending GIFOS</h2>
-                <h4>Mira los últimos<br>GIFOS de nuestra comunidad.</h4>
+                <h4>Mira los últimos GIFOS de nuestra comunidad.</h4>
                 <img src="./assets/embed1_.png" alt="img1">
             </section>
         </main>
         <footer class="dark">
-            <p id="p1">Compartir en:</p>
-            <img src="./assets/icons/icon_facebook.svg" alt="facebook">
-            <img src="./assets/icons/icon-twitter.svg" alt="twitter">
-            <img src="./assets/icons/icon_instagram.svg" alt="instagram">
+            <div class="redes">
+                <p id="p1">Compartir en:</p>
+                <a href=""><img src="./assets/icons/icon_facebook.svg" alt="facebook"></a>
+                <a href=""><img src="./assets/icons/icon-twitter.svg" alt="twitter"></a>
+                <a href=""><img src="./assets/icons/icon_instagram.svg" alt="instagram"></a>
+            </div>
             <p id="p2">© GIFOS 2020 All Rights Reserved.</p>
         </footer>
     </div>
-    <script src="js/jquery.min.js"></script>
-    <script src="./js/index.js"></script>
+    <!-- <script src="js/jquery.min.js"></script>
+    <script src="./js/index.js"></script> -->
 </body>
 </html>
