--- a/index.html
+++ b/index.html
@@ -8,42 +8,41 @@
 </head>
 <body>
     <div id="container">
-        <header class="dark" id="header">
+        <header class="light" id="header">
             <nav class="nav">
                 <div class="logo">
-                    <a href="#"><img src="./assets/icons/logo-mobile.svg" alt="logo_mobile"></a>
-                    <a href="#" class="boton" id="boton"><img class="icono" src="./assets/icons/burger.svg" alt="burger"></a>
+                    <img src="./assets/icons/logo-mobile.svg" alt="logo_mobile">
+                    <img id="burger" class="burger" src="./assets/icons/burger.svg" alt="burger">
                 </div>
-                <div class="menu" id="menu">
+                <div class="menu light on" id="menu">
                     <ul>
-                        <li><a href="">Modo Nocturno</a></li>
-                        <li><a href="">Favoritos</a></li>
-                        <li><a href="">Mis GIFOS</a></li>
+                        <li><a href="javascript:switchTheme()">Modo Nocturno</a><span></span></li>
+                        <li><a href="">Favoritos</a><span></span></li>
+                        <li><a href="">Mis GIFOS</a><span></span></li>
                     </ul>
                 </div>
             </nav>
         </header>
         <main>
-            <section id="inspirate" class="dark">
+            <section id="inspirate" class="light">
                 <h1>Inspírate, busca, guarda, y crea los mejores <span>GIFOS</span></h1>
-                <img src="./assets/icons/ilustra_header.svg" alt="ilustra_header">
-                <!-- <div class="over">
+                <img class="ilustra" src="./assets/icons/ilustra_header.svg" alt="ilustra_header">
+                <div class="search">
                     <input type="text" id="buscar" placeholder="Busca GIFOS y más">
+                    <a href="#"><img class="logoSearch" src="./assets/icons/icon-search.svg" alt="search"></a>
                 </div>
-                <div class="over">
-                    <img src="./assets/icons/icon-search.svg" alt="search">
-                </div> -->
-                <input type="text" id="buscar" placeholder="Busca GIFOS y más">
                 <h3>Trending:</h3>
                 <p id="reactions">Reactions, Entertainment, Sports, Stickers, Artists</p>
             </section>
-            <section id="trending" class="dark">
+            <section id="trending" class="light">
                 <h2>Trending GIFOS</h2>
                 <h4>Mira los últimos GIFOS de nuestra comunidad.</h4>
-                <img src="./assets/embed1_.png" alt="img1">
+                <div class="content">
+                    
+                </div>
             </section>
         </main>
-        <footer class="dark">
+        <footer class="light">
             <div class="redes">
                 <p id="p1">Compartir en:</p>
                 <a href=""><img src="./assets/icons/icon_facebook.svg" alt="facebook"></a>
@@ -53,7 +52,7 @@
             <p id="p2">© GIFOS 2020 All Rights Reserved.</p>
         </footer>
     </div>
-    <!-- <script src="js/jquery.min.js"></script>
-    <script src="./js/index.js"></script> -->
+    <script src="./js/index.js"></script>
+    <script src="./js/jquery.min.js"></script>
 </body>
 </html>
