--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto GIFOS</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glider-js@1.7.3/glider.min.css">
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
@@ -12,15 +11,15 @@
         <header class="light" id="header">
             <nav class="nav">
                 <div class="logo light">
-                    <img id="logoPpal" src="./assets/icons/logo-mobile.svg" alt="logo_mobile">
+                    <a href="#container"><img id="logoPpal" src="./assets/icons/logo-mobile.svg" alt="logo_mobile"></a>
                     <img id="burger" class="burger" src="./assets/icons/burger.svg" alt="burger">
                 </div>
-                <div class="on light" id="menu">
+                <div class="menu light on" id="menu">
                     <ul>
                         <li><a id="mode" href="javascript:switchTheme()">Modo Nocturno</a><span></span></li>
-                        <li><a href="">Favoritos</a><span></span></li>
-                        <li><a href="">Mis GIFOS</a><span></span></li>
-                        <li><img src="./assets/icons/button-crear-gifo.svg" alt="add"></li>
+                        <li><a href="javascript:clearFav()">Favoritos</a><span></span></li>
+                        <li><a href="javascript:clearGifos()">Mis GIFOS</a><span></span></li>
+                        <li><a href="javascript:clearCrearGifos()"><img src="./assets/icons/button-crear-gifo.svg" alt="add"></a></li>
                     </ul>
                 </div>
             </nav>
@@ -30,30 +29,43 @@
                 <h1>Inspírate, busca, guarda, y crea los mejores <span>GIFOS</span></h1>
                 <img class="ilustra" src="./assets/icons/ilustra_header.svg" alt="ilustra_header">
                 <div class="search">
-                    <input type="text" id="buscar" placeholder="Busca GIFOS y más">
-                    <a href="#"><img class="logoSearch" src="./assets/icons/icon-search.svg" alt="search"></a>
+                    <input type="text" id="search" class="light" placeholder="Busca GIFOS y más">
+                    <a href="javascript:search()"><img class="logoSearch" src="./assets/icons/icon-search.svg" alt="search"></a>
                 </div>
                 <h3>Trending:</h3>
                 <p id="reactions">Reactions, Entertainment, Sports, Stickers, Artists</p>
+                <div id="group-results">
+                    <span id="span"></span>
+                    <h2 id="title"></h2>
+                    <div id="results" class="results">
+
+                    </div>
+                    <button onclick="contVmas()" id="see">VER MÁS</button>
+                </div>
             </section>
             <section id="trending" class="light">
                 <h2>Trending GIFOS</h2>
                 <h4>Mira los últimos GIFOS de nuestra comunidad.</h4>
                 <div id="content" class="content">
-                    <button class="anterior">
-                        <img src="./assets/icons/button-left.svg" alt="prev">
-                    </button>
-                    <div id="lista" class="lista">
-                        <div class="gif">
-                            <img src="./assets/embed1_.png" alt="">
-                        </div>
-                        <div class="gif">
-                            <img src="./assets/embed1_.png" alt="">
+                    <img id="prev" src="./assets/icons/button-slider-left.svg" alt="previus">
+                    <ul id="galery">
+                        
+                    </ul>
+                    <div id="fOver" class="fullOver">
+                        <a href="javascript:close()"><img id="close" src="./assets/icons/close.svg" alt="close"></a>
+                        <img id="fullImg" src="./assets/embed1_.png" alt="">
+                        <div id="base">
+                            <div id="string">
+                                <p id="pOne">User</p>
+                                <p id="pTwo">Título GIFO</p>
+                            </div>
+                            <div id="options">
+                                <img src="./assets/icons/icon-favoritos.svg" alt="">
+                                <img src="./assets/icons/icon-download.svg" alt="">
+                            </div>
                         </div>
                     </div>
-                    <button class="siguiente">
-                        <img src="./assets/icons/button-right.svg" alt="prev">
-                    </button>
+                    <img id="next" src="./assets/icons/button-slider-right.svg" alt="next">
                 </div>
             </section>
         </main>
@@ -67,8 +79,10 @@
             <p id="p2">© GIFOS 2020 All Rights Reserved.</p>
         </footer>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/glider-js@1.7.3/glider.min.js"></script>
     <script src="./js/index.js"></script>
-    <script src="./js/jquery.min.js"></script>
+    <script src="./js/buscar.js"></script>
+    <script src="./js/favoritos.js"></script>
+    <script src="./js/misGifos.js"></script>
+    <script src="./js/crearGif.js"></script>
 </body>
 </html>
