--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Proyecto GIFOS</title>
     <link rel="stylesheet" href="./styles/style.css">
     <script src="./js/clases.js"></script>
+    <script src="https://www.WebRTC-Experiment.com/RecordRTC.js"></script>
 </head>
 <body>
     <div id="container">
