--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
                 <p id="reactions">Reactions, Entertainment, Sports, Stickers, Artists</p>
                 <span id="span"></span>
                 <h2 id="title"></h2>
-                <div id="results">
-
-                </div>
+                <div id="results"></div>
                 <button onclick="contVmas()" id="see">VER MÁS</button>
             </section>
             <section id="trending" class="light">
