--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                     <a href="javascript:location.reload()"><img id="logoPpal" src="./assets/icons/logo-mobile.svg" alt="logo_mobile"></a>
                     <div id="burger" class="burger"></div>
                 </div>
-                <div class="menu light on" id="menu">
-                    <ul>
+                <div class="menu light off" id="menu">
+                    <ul class="light">
                         <li><a id="mode" href="javascript:switchTheme()">Modo Nocturno</a><span></span></li>
                         <li><a href="javascript:clearFav()">Favoritos</a><span></span></li>
                         <li><a href="javascript:clearGifos()">Mis GIFOS</a><span></span></li>
