--- a/index.html
+++ b/index.html
@@ -31,17 +31,19 @@
                 <img class="iconFav" src="./assets/icons/icon-favoritos.svg" alt="SinFav">
                 <h1>Inspírate, busca, guarda, y crea los mejores <span>GIFOS</span></h1>
                 <img class="ilustra" src="./assets/icons/ilustra_header.svg" alt="ilustra_header">
-                <div id="cont-list" class="cont-list">
+                <div id="cont-list" class="cont-list light">
                     <ul id="itemSug">
                         <li id="first"><input type="text" id="search" class="light" placeholder="Busca GIFOS y más"></li>
                     </ul>
                 </div>
                 <h3>Trending:</h3>
-                <p id="reactions">Reactions, Entertainment, Sports, Stickers, Artists</p>
+                <div id="reactions">
+                    <p id="options">Reactions, Entertainment, Sports, Stickers, Artists</p>
+                </div>
                 <span id="span"></span>
-                <h2 id="title"></h2>
+                <h2 id="title" class="light"></h2>
                 <div id="results"></div>
-                <button id="see">VER MÁS</button>
+                <button id="see" class="light">VER MÁS</button>
             </section>
             <section id="trending" class="light">
                 <h2>Trending GIFOS</h2>
